feat 更新微信小程序注册 api，支持传入 JSCode 注册小程序账户
